--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
+   
 <body>
-    git practical
+    <h> git practical </h>
+    <h1> lesson 2 </h1>
 </body>
+    
 </html>
